apps/base/victoria-metrics-k8s-stack/components/gw-api/http-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vmagent-route
  namespace: monitoring
spec:
  parentRefs:
    - name: envoy-public
      namespace: envoy-gateway-system
  hostnames:
    - vmagent.${cluster_subdomain}
  rules:
    - backendRefs:
        - name: vmagent-vm-stack-victoria-metrics-k8s-stack
          port: 8429
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vmalert-route
  namespace: monitoring
spec:
  parentRefs:
    - name: envoy-public
      namespace: envoy-gateway-system
  hostnames:
    - vmalert.${cluster_subdomain}
  rules:
    - backendRefs:
        - name: vmalert-vm-stack-victoria-metrics-k8s-stack
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vmalertmanager-route
  namespace: monitoring
spec:
  parentRefs:
    - name: envoy-public
      namespace: envoy-gateway-system
  hostnames:
    - vmalertmanager.${cluster_subdomain}
  rules:
    - backendRefs:
        - name: vmalertmanager-vm-stack-victoria-metrics-k8s-stack
          port: 9093
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vmsingle-route
  namespace: monitoring
spec:
  parentRefs:
    - name: envoy-public
      namespace: envoy-gateway-system
  hostnames:
    - vmsingle.${cluster_subdomain}
  rules:
    - backendRefs:
        - name: vmsingle-vm-stack-victoria-metrics-k8s-stack
          port: 8428
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
    - name: envoy-public
      namespace: envoy-gateway-system
  hostnames:
    - grafana.${cluster_subdomain}
  rules:
    - backendRefs:
        - name: vm-stack-grafana
          port: 80
